# enlil-simulator

./: CMakeLists.txt  Makefile  README.md  TODO.md
docs/: uml_diagram.puml
include/graphics/: Camera.h  MeshMaker.h  Renderer.h
src/application/: Application.cpp
src/graphics/: Camera.cpp  MeshMaker.cpp  Renderer.cpp
src/graphics/shaders/: fragment.glsl  vertex.glsl
